@@ -1,3 +1,15 @@
+2011-12-13  Tony Chang  <tony@chromium.org>
+
+        inline setting m_regionForStyling since region is rarely set
+        https://bugs.webkit.org/show_bug.cgi?id=74435
+
+        Reviewed by Andreas Kling.
+
+        * css/CSSStyleSelector.cpp:
+        (WebCore::CSSStyleSelector::initForRegionStyling):
+        (WebCore::CSSStyleSelector::initRegionRules):
+        * css/CSSStyleSelector.h:
+
 2011-12-13  James Simonsen  <simonjam@chromium.org>
 
         Unreviewed, Chromium Mac build fix.
